--- a/test.html
+++ b/test.html
@@ -16,6 +16,8 @@
             <option value="TV Stand">TV Stand</option>
             <option value="ST-LC Patch Cord OS2 Duplex 5M">ST-LC Patch Cord OS2 Duplex 5M</option>
             <!-- Add more options as needed -->
+
+            <!-- asd -->
         </select>
     </form>
 
